--- a/templates/question3.html
+++ b/templates/question3.html
@@ -1,4 +1,5 @@
-{% extends 'generic.html' %}
+{% extends "generic.html" %}
+{% load static %}
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
@@ -40,7 +41,9 @@
 		<h2 class="title-question">Accés PMR par arrondissements</h2>
 		<div class="row align-items-center container-graphique-q3">
 			<div class="col-6">
-				<img src="../static/img/q3.png" alt="Image du Graphique  Question n°3" class="img-q3 "/>
+				<canvas id="chart3"></canvas>
+				<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+				<script src="{% static 'js/charts/q3.js' %}"></script>
 			</div>
 			<div class="col-6 content-question-q3">
 				<h3 class="title-question-description">Description</h3>
